# chess-gymnasium-env

./: .gitignore  README.md  pyproject.toml  requirements.txt
chess_gymnasium_env/: __init__.py
chess_gymnasium_env/envs/: __init__.py  chess.py  utils.py
chess_gymnasium_env/wrappers/: __init__.py
