[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chess_gymnasium_env"]

[project]
name = "chess_gymnasium_env"
version = "0.0.1"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = "./requirements.txt" }