[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chess_gymnasium_env"]

[project]
name = "chess_gymnasium_env"
version = "0.0.4"
dependencies = [
    "gymnasium",
    "pygame>=2.1.3",
    "pre-commit",
    "chess",
    "CairoSVG",
]